@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-01
+2013-01-30 Mikhail Dubrovin
+-add new calibraion data classes CsPadBeamIntersectV1 and CsPadBeamIntersectV1 
+	
 Tag: V00-04-00
 2013-01-30 Andy Salnikov
 - switching to const ndarrays for array data
